fixed align of images in ALBUMS section

--- a/css/creative.css
+++ b/css/creative.css
@@ -60,6 +60,11 @@ p {
     background-color: #222;
 }
 
+img {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .text-faded {
     color: rgba(255,255,255,.7);
 }
